name:                currency-codes
version:             1.0.0.0
description:         Representation of currencies according to the ISO-4217 standard
license:             MIT
license-file:        LICENSE
author:              Chordify
maintainer:          Matthias Benkort <matthias@chordify.net>
copyright:           (c) 2017 Chordify
category:            Data
build-type:          Simple
homepage:            https://gitlab.com
bug-reports:         https://github.com/bos/aeson/issues
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -j4 -O2
  default-extensions:  DataKinds
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , ExistentialQuantification
                     , FlexibleContexts
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeOperators
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bson
                     , lens
                     , random
                     , safe
                     , swagger2
                     , text
  exposed-modules:     Data.Currency
